--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@
     <div>salutttttttttt c'est moi zef nmzkjgnapghj derniere mise a journ^ !!!!!</div>
 </body>
 </html>
+<!--1 header + 1 main + 1 footer! dans header le titre dans le main une div avec une image dans footer mention legal  -->
