--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><!---ici le langage de la page-->
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8"><!--langage utiliser pour codé-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--compatible-->
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Test</title>
+    <title>Test</title><!--titre onglet-->
 </head>
 <body>
     <p>Bonjours a tous :)</p>
