--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <title>Test</title><!--titre onglet-->
 </head>
 <body>
-    <p>Bonjours a tous :)</p>
-
-    <div>salutttttttttt c'est moi zef nmzkjgnapghj derniere mise a journ^ !!!!!</div>
+    <header>
+        <p class="titre">Bonjour sur mon site Web</p>
+    </header>
+    <main>
+        <img class="img" src="img/img.jpg">    
+    </main>
+    <footer>
+        <div>
+            <a href="condition" href="#">Condition General</a>
+        </div>
+    </footer>
 </body>
 </html>
 <!--1 header + 1 main + 1 footer! dans header le titre dans le main une div avec une image dans footer mention legal  -->
