--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </main>
     <footer>
         <div>
-            <a href="condition" href="#">Condition General</a>
+            <a alt="" href="#">Condition General</a>
         </div>
     </footer>
 </body>
