--- a/index.html
+++ b/index.html
@@ -20,4 +20,6 @@
     </footer>
 </body>
 </html>
-<!--1 header + 1 main + 1 footer! dans header le titre dans le main une div avec une image dans footer mention legal  -->
+<!--1 header (dans le header le titre en rouge au center)
+    1 main   (dans le main une div avec une image (Clicable redire sur une autre page))
+    1 footer (dans le footer une balise <a> avec mention legal -->
