--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header>
         <p class="titre">Bonjour sur mon site Web</p>
     </header>
+    <head>
+        hey c'est en codant que l'on devient codeur.
+    </head>
     <main>
         <img class="img" src="img/img.jpg">    
     </main>
