--- a/index2.html
+++ b/index2.html
@@ -4,35 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <link rel="stylesheet" href="style.index.css">
-    <title>Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.index.2.css">
+    <title>Entrainement</title>
 </head>
 
 <body>
     <header>
-        <div class="div0">
-            <p>div0</p>
+        <div class="header">
+            <p>header</p>
         </div>
     </header>
-    <head>
-        hey c'est en codant que l'on devient codeur. expression de Fdebuck 
-    </head>
-    <main>
+
+    <main class="main">
+
         <div class="div1">
             <p>div1</p>
         </div>
+
         <div class="div2">
             <p>div2</p>
         </div>
+
     </main>
     <footer>
-        <div class="div3">
-            <p>div3</p>
-        </div>
-
-
+        <div class="footer">
+            <p>footer
+            </p>
     </footer>
+
 </body>
 
 </html>
