--- a/index2.html
+++ b/index2.html
@@ -36,3 +36,7 @@
 </body>
 
 </html>
+<!--site ecommerce
+    une page d'accueil avec une photo et logo (cliquable redirige sur l'accueil)
+    une pages avec 3 produit a vendre
+une pages nous contacté-->
