--- a/index2.html
+++ b/index2.html
@@ -37,6 +37,6 @@
 
 </html>
 <!--site ecommerce
-    une page d'accueil avec une photo et logo (cliquable redirige sur l'accueil)
+    une page d'accueil avec une photo et logo + 3 lien qui rediregie sur les pages nous contacte , accueil, page produit (cliquable redirige sur l'accueil)
     une pages avec 3 produit a vendre
 une pages nous contacté-->
