--- a/index2.html
+++ b/index2.html
@@ -6,37 +6,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.index.2.css">
-    <title>Entrainement</title>
+    <title>entrainement</title>
 </head>
 
 <body>
     <header>
-        <div class="header">
-            <p>header</p>
-        </div>
+        <a class="accueil" href="index2.html">
+            <img class="logo" src="img/logo.png" alt="logo">
+        </a>
+        <p class="titre">
+            hey c'est mon site !!!!
+        </p>
     </header>
+    <main>
+        <div class="bouton1">
+            <p>
+            <a href="produit.html" > 
+                Nos produit
+            </a>
+            </p>
+            <img src="img/produits.png" alt="photo de produits" titre="photo de produits">
 
-    <main class="main">
-
-        <div class="div1">
-            <p>div1</p>
         </div>
 
-        <div class="div2">
-            <p>div2</p>
+        <div class="bouton2">
+                <p>
+                    <a href="accessoires.html" > 
+                        Nos accessoires
+                    </a>
+                    </p>
+                    <img src="img/accessoires.png" alt="photo d'accessoires" titre="photo d'accessoires">
+
+        </div>
+
+        <div class="bouton3">
+            <p>
+                <a href="consommables.html" > 
+                    Nos consommables
+                </a>
+                </p>
+                <img src="img/consommable.png" alt="photo d'accessoires" titre="photo d'accessoires">
+
+
         </div>
 
     </main>
     <footer>
-        <div class="footer">
-            <p>footer
+        <div class="bas">
+           
+            <p>
+                Nous contacter
             </p>
+
+            <p>login</p>
+
+
+        </div>
+
     </footer>
 
 </body>
 
 </html>
 <!--site ecommerce
-    une page d'accueil avec une photo et logo + 3 lien qui rediregie sur les pages nous contacte , accueil, page produit (cliquable redirige sur l'accueil)
-    une pages avec 3 produit a vendre
-une pages nous contacté-->
+    une page d'accueil avec une photo et logo + 
+
+    3 lien qui rediregie sur les pages:
+
+    - accueil,
+    - page produit : une pages avec 3 produit a vendre
+    - nous contacter , une pages nous contacter
+    - page login
+    -->
