--- a/index2.html
+++ b/index2.html
@@ -55,10 +55,17 @@
         <div class="bas">
            
             <p>
+                <a href="contact.html">
                 Nous contacter
+                </a>
             </p>
 
-            <p>login</p>
+            <p>
+                <a href="login.html">
+                login
+                </a>
+                
+            </p>
 
 
         </div>
