--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="style.index.2.css">
 </head>
 <body>
-    
+    <header>
+        <a class="accueil" href="index2.html">
+            <img class="logo" src="img/logo.png" alt="logo">
+        </a>
+        <p class="titre">
+            hey c'est mon site !!!!
+        </p>
+    </header>
+    <main>
+    <form class="contact" action="/ma-page-de-traitement" method="post">
+        <div>
+            <label for="name">Nom :</label>
+            <input type="text" id="name" name="user_name">
+        </div>
+        <div>
+            <label for="mail">e-mail :</label>
+            <input type="email" id="mail" name="user_mail">
+        </div>
+        <div>
+            <label for="msg">Message :</label>
+            <textarea id="msg" name="user_message"></textarea>
+        </div>
+    </form>
+    </main>
+
 </body>
 </html>
