--- a/index2.html
+++ b/index2.html
@@ -41,7 +41,7 @@
 
         <div class="bouton3">
             <p>
-                <a href="consommables.html" > 
+                <a href="consommable.html" > 
                     Nos consommables
                 </a>
                 </p>
@@ -64,7 +64,7 @@
                 <a href="login.html">
                 login
                 </a>
-                
+
             </p>
 
 
