--- a/produit.html
+++ b/produit.html
@@ -9,6 +9,14 @@
 
 </head>
 <body>
+    <header>
+        <a class="accueil" href="index2.html">
+            <img class="logo" src="img/logo.png" alt="logo">
+        </a>
+        <p class="titre">
+            hey c'est mon site !!!!
+        </p>
+    </header>
     
 </body>
 </html>
