--- a/accessoires.html
+++ b/accessoires.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.index.2.css">
 </head>
 <body>
-    
+    <header>
+        <a class="accueil" href="index2.html">
+            <img class="logo" src="img/logo.png" alt="logo">
+        </a>
+        <p class="titre">
+            hey c'est mon site !!!!
+        </p>
+    </header>
+
+
 </body>
 </html>
