--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,38 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.index.2.css">
 </head>
+
 <body>
-    
+    <header>
+        <a class="accueil" href="index2.html">
+            <img class="logo" src="img/logo.png" alt="logo">
+        </a>
+        <p class="titre">
+            hey c'est mon site !!!!
+        </p>
+    </header>
+
+    <div class="container">
+        <!-- zone de connexion -->
+
+        <form action="verification.php" method="POST">
+            <h1>Connexion</h1>
+
+            <label><b>Nom d'utilisateur</b></label>
+            <input type="text" placeholder="Entrer le nom d'utilisateur" name="username" required>
+            </br>
+            </br>
+            <label><b>Mot de passe</b></label>
+            <input type="password" placeholder="Entrer le mot de passe" name="password" required>
+            </br>
+            </br>
+            <input type="submit" id='submit' value='LOGIN'>
+
+        </form>
+    </div>
+
+
+
 </body>
+
 </html>
