suite de la MAJ

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>page login</title>
     <link rel="stylesheet" href="style.index.2.css">
 </head>
 
@@ -18,9 +18,9 @@
             hey c'est mon site !!!!
         </p>
     </header>
-
+    <main>
     <div class="container">
-        <!-- zone de connexion -->
+        
 
         <form action="verification.php" method="POST">
             <h1>Connexion</h1>
@@ -37,8 +37,27 @@
 
         </form>
     </div>
+    </main>
+    <footer>
+
+        <div class="bas">
+           
+            <p>
+                <a href="contact.html">
+                Nous contacter
+                </a>
+            </p>
+
+            <p>
+                <a href="login.html">
+                login
+                </a>
+
+            </p>
 
 
+        </div>
+    </footer>
 
 </body>
 
