--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>page contact</title>
     <link rel="stylesheet" href="style.index.2.css">
 </head>
 <body>
@@ -17,21 +17,45 @@
         </p>
     </header>
     <main>
-    <form class="contact" action="/ma-page-de-traitement" method="post">
+    <form class="contact" action="mailto:debuck.florent@gmail.com" method="post" enctype="text/plain" >
         <div>
-            <label for="name">Nom :</label>
-            <input type="text" id="name" name="user_name">
+            <p>Nom :<input type="text" id="name" name="user_name">
+            </p>
         </div>
         <div>
-            <label for="mail">e-mail :</label>
-            <input type="email" id="mail" name="user_mail">
+            <p> Email: <input type="email" id="mail" name="user_mail">
+            </p>
         </div>
         <div>
-            <label for="msg">Message :</label>
-            <textarea id="msg" name="user_message"></textarea>
+            <p>Commentaire :<textarea id="msg" name="user_message"></textarea>
+            </p>
+        
         </div>
+        <input type="submit" id='submit' value='Send message'>
+
     </form>
     </main>
+    <footer>
+
+        <div class="bas">
+           
+            <p>
+                <a href="contact.html">
+                Nous contacter
+                </a>
+            </p>
+
+            <p>
+                <a href="login.html">
+                login
+                </a>
+
+            </p>
+
+
+        </div>
+    </footer>
+
 
 </body>
 </html>
