--- a/produit.html
+++ b/produit.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>page produits</title>
     <link rel="stylesheet" href="style.index.2.css">
 
 </head>
@@ -17,6 +17,35 @@
             hey c'est mon site !!!!
         </p>
     </header>
-    
+    <main>
+
+
+
+
+
+
+
+    </main>
+    <footer>
+        <div class="bas">
+           
+            <p>
+                <a href="contact.html">
+                Nous contacter
+                </a>
+            </p>
+
+            <p>
+                <a href="login.html">
+                login
+                </a>
+
+            </p>
+
+
+        </div>
+
+
+    </footer>
 </body>
 </html>
